# pydantic_for_fun

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  trash.py
.claude/skills/generate-example/: SKILL.md
.devcontainer/: devcontainer.json
.lancedb_data/conversations.lance/_transactions/: 0-669702c1-472f-497c-a4c0-b228ce25cc59.txn
docs/: index.md  modules.md
pydantic_ai_for_fun/: browser_agent.py  computer_use.py  settings.py  super_agent.py
pydantic_ai_for_fun/10_multi_agent_pattern/: 1_agent_delegation.py  2_agent_delegation_deps.py  3_programmatic_handoff.py
pydantic_ai_for_fun/11_web_ui/: 1_web_ui_basics.py  2_web_ui_config.py
pydantic_ai_for_fun/12_embedding/: 1_embeddings.py
pydantic_ai_for_fun/13_testing/: 13_testing.py
pydantic_ai_for_fun/14_evals/: 1_evals.py  2_quick_start.py  3_core_concept.py  4_evaluators_overview.py  5_builtin_evaluators.py  6_llm_judge.py  7_report_evaluators.py  8_span_based.py  9_online_evaluation.py
pydantic_ai_for_fun/1_agent/: 10_guardrail.py  11_conversation_short_memory.py  12_conversation_long_memory.py  13_type_safety copy.py  14_system_prompt.py  15_instructions.py  16_retry_self_correction.py  17_evals.py  18_model_errors.py  1_base_setup.py  2_base_setup.py  3_run_stream.py  4_usage_limite.py  5_avoid_infinite_loop copy.py  6_limit_nbr_call_tool.py  7_model_setting_and_limit copy.py  8_metadata_run.py  9_concurrency_limiting.py
pydantic_ai_for_fun/2_dependencies/: 1_defining_dependencies.py  2_overriding_dependencies.py
pydantic_ai_for_fun/3_tools/1_tools/: 1_function_tools.py  2_registering_via_agent_argument.py  3_tool_schema.py
pydantic_ai_for_fun/3_tools/2_tools_advanced/: 10_external_loop.py  1_tool_output.py  2_advanced_tool_return.py  3_dynamic_tools.py  4_tool_retries.py  5_custom_args_validator.py  6_parallel_tools_concurrency.py  7_tool_search.py  8_toolsets.py  9_human_in_the_loop.py
pydantic_ai_for_fun/3_tools/3_deferred_tools/: 1_human_in_the_loop.py  2_external_tool_execution.py
pydantic_ai_for_fun/3_tools/5_common_tools/: 2_web_fetch.py  (+1 more)
pydantic_ai_for_fun/4_output/: 1_output.py  2_structured_output.py  3_output_functions.py  4_output_modes.py  5_validation_context.py  6_output_validators.py  7_image_output.py  8_streaming.py
pydantic_ai_for_fun/5_capabilities/: 1_builtin_capabilities.py  2_lifecycle_hooks.py  3_custom_capabilities.py  4_hooks.py  5_thinking.py  6_code_mode.py
pydantic_ai_for_fun/6_hooks/: 1_hooks_decorators.py  2_hooks_model_request.py  3_hooks_tools.py  4_hooks_wrap_timeout.py  5_hooks_errors_retry.py  6_hooks_events.py
pydantic_ai_for_fun/7_message_and_chat_history/: 1_messages_basics.py  2_messages_conversation.py  3_messages_serialization.py  4_history_processors.py
pydantic_ai_for_fun/8_media_input/: 1_multimodal_input.py
(+8 files in other folders)
